Todd Rinaldo July 27 2010 v0.13_01
* RT 59754 AUTOLOAD does quoted eval.
* RT 59753 Mmap.xs:14:0: warning: "_POSIX_C_SOURCE" redefined
* RT 15905 bug/segmentation fault on ia64 (altix)
* RT 22615 munmap($unseen) segfaults
* RT 59750 Update Makefile.PL to show Module dependencies.
* RT 59749 use Test::More and test interface more thoroughly.
* RT 59748 use XSLoader if possible for more lightweight load
* RT 59747 Don't import Carp into module by default
* update META.yml

Aaron Kaplan, Sep 2003, v 0.12
. cleaned up style and usage in C to fit ANSI-C
. contributed documentation

Scott Walters, Feb 2002, v 0.11
. tied interface to help reduce foot shooting and hoop jumping
. hardwire() utility method
. perl 5.6.x compatability

Malcolm Beattie, 21 June 1996, v 0.10
Original author, original version

. 