@@ -188,7 +188,7 @@ require Exporter;
 	     MAP_ANON MAP_ANONYMOUS MAP_FILE MAP_PRIVATE MAP_SHARED
 	     PROT_EXEC PROT_NONE PROT_READ PROT_WRITE);
 
-$VERSION = '0.13_02';
+$VERSION = '0.13_03';
 
 sub new {
 
