@@ -24,12 +24,18 @@ use Sys::Mmap;
     like($@, qr/^undef variable not unmappable /, "munmap detects undef perl variables and fails");
 }
 
-foreach my $foo ("", "1234", "1.232", "abcdefg" ){
-    eval {munmap($foo)};
-    is($@, "munmap failed! errno 22 Invalid argument\n", "Unmapped strings die");
+SKIP: {
+    skip "BSD kernels can't unmap a bad pointer like linux kernels can", 4 if($^O =~ m/bsd/i || $^O =~ m/darwin/i);
+    foreach my $foo ("", "1234", "1.232", "abcdefg" ){
+	eval {munmap($foo)};
+	is($@, "munmap failed! errno 22 Invalid argument\n", "Unmapped strings die");
+    }
 }
 
-foreach my $foo (-1283843, -1, 0, 1, 2222131, 2.3451, -1213.12 ){
-    eval {munmap($foo)};
-    like($@, qr/^variable is not a string/, "munmap detects ints and floats and fails");
+SKIP: {
+    skip "BSD kernels can't unmap a bad pointer like linux kernels can", 7 if($^O =~ m/bsd/i || $^O =~ m/darwin/i);
+    foreach my $foo (-1283843, -1, 0, 1, 2222131, 2.3451, -1213.12 ){
+	eval {munmap($foo)};
+	like($@, qr/^variable is not a string/, "munmap detects ints and floats and fails");
+    }
 }
